# need_gas

./: .gitignore  README.md  index.html  manage.py  pyproject.toml  requirements.txt
app/: admin.py  core.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/fixtures/: drivers.json  gas_stations.json  locations.json
app/management/commands/: update_customers.py  update_gas_stations.py
app/tests/: test_admin.py  test_core.py  test_models.py  test_setups.py  test_view.py
need_gas/: PARAMETERS.py  celery.py  settings.py  urls.py
